<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/account_history_icon"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        android:title="@string/transaction_history"/>

    <item
        android:id="@+id/traffic_update_icon"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_notes_24"
        android:title="@string/traffic_update"/>

    <item
        android:id="@+id/navigation_icon"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_navigation_24"
        android:title="@string/navigation"/>

    <item
        android:id="@+id/profile_icon"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile"/>

</menu>