<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_background"
    tools:context="com.automatedcartollingsystem.login.SignInActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="296dp"
        android:layout_height="117dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="@+id/email_cardView"
        app:layout_constraintStart_toStartOf="@+id/email_cardView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_logo_a" />

    <androidx.cardview.widget.CardView
        android:id="@+id/email_cardView"
        android:layout_width="245dp"
        android:layout_height="44dp"
        android:layout_marginTop="83dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo">

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/password_cardView"
        android:layout_width="245dp"
        android:layout_height="44dp"
        android:layout_marginTop="132dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="12dp"
        app:layout_constraintEnd_toEndOf="@+id/email_cardView"
        app:layout_constraintStart_toStartOf="@+id/email_cardView"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:importantForAutofill="no" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/forgot_password_textview"
        android:layout_width="125dp"
        android:layout_height="26dp"
        android:layout_marginStart="120dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_cardView"
        app:layout_constraintTop_toBottomOf="@+id/password_cardView"
        android:focusable="true" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="182dp"
        android:layout_height="39dp"
        android:layout_marginTop="52dp"
        android:elevation="5dp"
        android:stateListAnimator="@null"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_textview" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="170dp"
        android:layout_height="25dp"
        android:layout_marginTop="68dp"
        android:text="@string/register_account"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/register_button"
        app:layout_constraintStart_toStartOf="@+id/register_button"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="182dp"
        android:layout_height="39dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="112dp"
        android:elevation="5dp"
        android:stateListAnimator="@null"
        android:text="@string/register"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.15" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateBehavior="repeat"
        android:minHeight="25dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />


</androidx.constraintlayout.widget.ConstraintLayout>