<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transaction_cardview"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_margin="5dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="4dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/start_trip_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:hint="@string/start_trip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.503" />

        <TextView
            android:id="@+id/end_trip_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="176dp"
            android:hint="@string/end_trip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/total_amount_textView_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.503" />

        <TextView
            android:id="@+id/route_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/route"
            app:layout_constraintEnd_toEndOf="@+id/toll_number_textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/toll_number_textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/toll_number_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:text="@string/no_of_tolls"
            app:layout_constraintEnd_toStartOf="@+id/total_amount_textView_1"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toEndOf="@+id/end_trip_textView"
            app:layout_constraintTop_toBottomOf="@+id/route_textView" />

        <TextView
            android:id="@+id/total_amount_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="28dp"
            android:text="@string/total_amount"
            app:layout_constraintBottom_toBottomOf="@+id/total_amount_textView_1"
            app:layout_constraintEnd_toStartOf="@+id/total_amount_textView_1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/end_trip_textView"
            app:layout_constraintTop_toBottomOf="@+id/toll_number_textView"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/route_textView_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="36dp"
            android:hint="@string/n1"
            app:layout_constraintBottom_toBottomOf="@+id/toll_number_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.017"
            app:layout_constraintStart_toEndOf="@+id/route_textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/toll_number_textView_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="16dp"
            android:hint="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/toll_number_textView"
            app:layout_constraintTop_toBottomOf="@+id/route_textView_1"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/total_amount_textView_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="28dp"
            android:hint="R 123"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toll_number_textView_1"
            app:layout_constraintVertical_bias="0.818"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/arrow_imageView"
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:layout_margin="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/end_trip_textView"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toEndOf="@+id/start_trip_textView"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_right_alt_24"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>