<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_background"
    tools:context="com.automatedcartollingsystem.registration.RegistrationActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="361dp"
        android:layout_height="474dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toTopOf="@+id/register_button_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/user_name"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.123"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/username"
                android:layout_width="280dp"
                android:layout_height="39dp"
                android:layout_marginTop="6dp"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:scrollHorizontally="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mobile_number"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.154"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <EditText
                android:id="@+id/user_mobile_number"
                android:layout_width="280dp"
                android:layout_height="39dp"
                android:layout_marginTop="6dp"
                android:ems="10"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:textColor="@color/black"
                android:scrollHorizontally="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobile_number"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/user_email"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.122"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_mobile_number" />

            <EditText
                android:id="@+id/user_email_address"
                android:layout_width="280dp"
                android:layout_height="39dp"
                android:layout_marginTop="6dp"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:scrollHorizontally="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/prompt_password"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.133"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_email_address" />

            <EditText
                android:id="@+id/password"
                android:layout_width="280dp"
                android:layout_height="39dp"
                android:layout_marginTop="6dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:scrollHorizontally="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_textview"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/re_enter_password"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.168"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <EditText
                android:id="@+id/reenter_password"
                android:layout_width="280dp"
                android:layout_height="39dp"
                android:layout_marginTop="6dp"
                android:ems="10"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:scrollHorizontally="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password"
                android:importantForAutofill="no" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- I can only change the background button if the button doesn't use main app theme other wise it won't be possible-->
    <Button
        android:id="@+id/register_button_2"
        android:layout_width="195dp"
        android:layout_height="53dp"
        android:layout_marginBottom="64dp"
        android:elevation="12dp"
        android:stateListAnimator="@null"
        android:text="@string/register"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>