<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_margin="6dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp"
    tools:context="com.automatedcartollingsystem.appfunctionality.NavigationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/from_textView"
            android:layout_width="54dp"
            android:layout_height="34dp"
            android:text="@string/from"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.092" />

        <TextView
            android:id="@+id/to_textView"
            android:layout_width="46dp"
            android:layout_height="22dp"
            android:layout_marginTop="16dp"
            android:text="@string/to"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_editText" />

        <EditText
            android:id="@+id/start_editText"
            android:layout_width="255dp"
            android:layout_height="42dp"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="Start"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/from_textView"
            app:layout_constraintTop_toTopOf="@+id/from_textView"
            tools:ignore="HardcodedText"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/end_editText"
            android:layout_width="255dp"
            android:layout_height="42dp"
            android:layout_marginBottom="28dp"
            android:ems="10"
            android:hint="End"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/set_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/to_textView"
            app:layout_constraintTop_toBottomOf="@+id/start_editText"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="HardcodedText"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/set_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/set"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/end_editText"
            app:layout_constraintHorizontal_bias="0.688"
            app:layout_constraintStart_toStartOf="@+id/end_editText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

<!-- this is the xml file for navigation when user wants to select places-->
</androidx.cardview.widget.CardView>